# AI-LLM-GenAI

./: .gitignore
AI-Learning-Path/: L2_Cosine_IP.md  README.md  main.py  pyproject.toml
AI-Learning-Path/Basics/: Connect-AzureAI.ipynb
AI-Learning-Path/Excalidraw/: FAISS.excalidraw
AI-Learning-Path/custom/: custom.css
AI-Learning-Path/data/: cost_log.csv
AI-Learning-Path/input_data/: sample_stories.txt
AI-Learning-Path/notebooks/: Connect-AzureAI.ipynb
AI-Learning-Path/src/: basic_azure_openai_llm_call.py  call_log.py  cost_log.py  find_root_directory.py  llm_call_logger.py  mean_variance.py
AI-Learning-Path/src/notebooks/: AzureOpenAI-Connect.ipynb  AzureOpenAI-Embedding.ipynb  AzureOpenAI-Prompting.ipynb  Connect-AzureAI.ipynb  LLM-Tokenization.ipynb  Langchain-Prompting.ipynb  Vector-Similarities-Algorithms.ipynb  plot-cost-graph.ipynb  prompting.ipynb
AI-Learning-Path/src/notebooks/faiss_index_storage/: index.faiss  index.pkl
Build-GPT-LLM-Scratch/Code/: Custom_Tokenizer.ipynb
Build-GPT-LLM-Scratch/excalidraw/: GPT-Details.excalidraw  tokens.excalidraw
LLM-Understanding/: .gitignore  main.py  pyproject.toml
LLM-Understanding/Code/: Custom_Tokenizer.ipynb  main.py
LLM-Understanding/excalidraw/: layer-normalization.excalidraw  tokens.excalidraw
