[project]
name = "ai-learning-path"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "jupyterlab>=4.5.6",
    "numpy>=2.2.6",
    "openai>=2.32.0",
    "pymupdf>=1.27.2.2",
    "python-dotenv>=1.2.2",
    "tiktoken>=0.12.0",
]
